2007-04-28  Piotr Fusik  <fox@scene.pl>
* win32/Makefile: create single package for the Win32 platform containing
  ASAP2WAV, WASAP, Winamp plugin and foobar2000 plugin

* win32/wasap/README, win32/winamp/README, win32/foobar2000/README: updated


2007-04-27  Piotr Fusik  <fox@scene.pl>
* asap.c, asap.h, asap2wav.c, win32/Makefile, win32/settings.rc,
  win32/settings.h, win32/wasap/wasap.c, win32/wasap/wasap.rc,
  win32/wasap/resource.h, win32/winamp/in_asap.c, win32/foobar2000/foo_asap.c,
  gsplayer/gspasap.c, xmms/libasap.c, TODO:
  recognize AUTHOR, NAME, DATE, TIME tags in SAP files;
  major refactoring of the API

* asap2wav.c: removed the "no input files" message

* asapscan.c, asap.c, win32/Makefile: asapscan is a command-line utility
  that automatically detects the values that should be specified in TIME tags

* config.guess, config.sub: updated


2007-04-24  Piotr Fusik  <fox@scene.pl>
* gsplayer/gspasap.c, gsplayer/mapplugin.h, win32/Makefile:
  plugin for GSPlayer, doesn't work yet for an unknown reason


2007-04-21  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, win32/wasap/wasap.c, win32/wasap/wasap.rc,
  win32/wasap/resource.h, win32/wasap/wasap.ico, win32/wasap/play.ico,
  win32/wasap/stop.ico, win32/wasap/README, win32/wasap/.cvsignore:
  moved WASAP-specific files to a separate directory

* win32/Makefile, win32/settings.rc, win32/settings.h, win32/winamp/in_asap.c,
  win32/foobar2000/foo_asap.cpp: song time limit setting for Winamp
  and foobar2000 plugins


2006-09-17  Piotr Fusik  <fox@scene.pl>
* win32/Makefile, win32/wasap.rc, win32/foobar2000/foo_asap.cpp: slight clean-up


2006-08-07  Piotr Fusik  <fox@scene.pl>
* win32/wasap.c: restore tray icon after Explorer restart


2006-05-22  Piotr Fusik  <fox@scene.pl>
* asap.c, asap2wav.c: minor code improvements


2006-05-14  Piotr Fusik  <fox@scene.pl>
* asap.h, win32/wasap.rc: wasap.rc now takes version numbers from asap.h

* INSTALL: sf.net switched to per-project CVS server addresses
